--- a/about.html
+++ b/about.html
@@ -22,12 +22,12 @@
         <nav>
             <ul class="nav-link">
                 <li>
-                    <a href="fulchristian.html">Home</a>
-                    <a href="service.html">Service</a>
+                    <a href="index.html ">Home</a>
+                    <a href="service.html ">Service</a>
                 </li>
             </ul>
         </nav>
-        <a class="cta" href="contact.html"><button>Contact</button></a>
+        <a class="cta " href="contact.html "><button>Contact</button></a>
     </header>
     <br>
     <br>
@@ -36,13 +36,13 @@
     </center>
     <br>
     <center>
-        <img src="./kobby.jpg" alt="pic" width="200px">
+        <img src="./kobby.jpg " alt="pic " width="200px ">
         <br>
         <br>
-        <div class="contact-form">Hello 👋, Am Ignitious Mensah the developer and founder of Full Christian A.I (Artificial Intelligence). Am a student in senior high school studing Science Information Technolgy(I.T). Am 17 years, a programmer and spend most of my time coding.
+        <div class="contact-form ">Hello 👋, Am Ignitious Mensah the developer and founder of Full Christian A.I (Artificial Intelligence). Am a student in senior high school studing Science Information Technolgy(I.T). Am 17 years, a programmer and spend most of my time coding.
             One may ask, what are my abilities?
         </div>
-        <div class="contact-form"> Well, I find problems facing the society, look for solutions and try to implement the solutions.</div>
+        <div class="contact-form "> Well, I find problems facing the society, look for solutions and try to implement the solutions.</div>
         <br>
         <div>To get in touch:</div>
         <div>Instagram: <b>_mr.ignite.</b></div>
@@ -55,8 +55,8 @@
     <hr>
     <center>created by:Mensah Ignitous ©2020</center>
     </hr>
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js "></script>
+    <script src="./script.js "></script>
 
 </body>
 
