--- a/service.html
+++ b/service.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="nav-link">
                 <li>
-                    <a href="fulchristian.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
                 </li>
             </ul>
