--- a/service1.html
+++ b/service1.html
@@ -34,7 +34,7 @@
             <img src="fclogo.png" alt="fullchristianlogo" width="120px">
             <h1>FULL CHRISTIAN</h1>
             <div>
-                <h6>Enhancing Christianity Throungh Technology</h6>
+                <h6>Enhancing Christianity Through Technology</h6>
             </div>
         </center>
     </secttion>
