--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <img src="./kobby.jpg " alt="pic " width="200px ">
         <br>
         <br>
-        <div class="contact-form ">Hello 👋, Am Ignitious Mensah the developer and founder of Full Christian A.I (Artificial Intelligence). Am a student in senior high school studing Science Information Technolgy(I.T). Am 17 years, a programmer and spend most of my time coding.
+        <div class="contact-form ">Hello 👋, Am Ignitious Mensah the developer and founder of Full Christian A.I (Artificial Intelligence). Am a student in senior high school studying Science Information Technolgy(I.T). Am 17 years, a programmer and spend most of my time coding.
             One may ask, what are my abilities?
         </div>
         <div class="contact-form "> Well, I find problems facing the society, look for solutions and try to implement the solutions.</div>
