--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="About Full Christain">
     <meta name="author" content="Ignitious Mensah">
-    <meta name="keywords" content="About Full Christian">
+    <meta name="keywords" content=" First religious Artificial Intelligence in the World,About Full Christian">
     <title>HOME</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
